docs: README consistency fixes and PowerShell variants
- Add license file instructions to main README quick-start path
- Add GridGain 8 / Apache Ignite bridging explanation
- Add bash-compatible terminal to prerequisites
- Add PowerShell variants for bash-specific commands (cmd /c for
  piped input, Select-String for topology verification)
- Standardize topology verification to grep/tail pattern
- Fix misleading colocation claims (Track-Album, Invoice-InvoiceLine)
- Add working directory note to handson2
- Add DML cleanup warning (shared IDs with handson3)
- Fix four patterns to five patterns in handson3
- Replace GG8 with GridGain 8 for consistent terminology
- Add From the repository root to sidecar command sections
- Fix static IP list to static host list in handson1
- Add InaccessibleObjectException and MSYS troubleshooting rows
- Add data-loss warning to shutdown section
- Fix db/ persistence claim, troubleshooting table form